--- a/en-index.html
+++ b/en-index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" class="no-js">
   <head>
     <!-- Title -->
@@ -46,7 +46,6 @@
       href="assets/vendor/font-awesome/css/all.min.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="assets/css/custom-ar.css" type="text/css" />
     <link
       rel="stylesheet"
       href="assets/vendor/themify-icons/css/themify-icons.css"
@@ -105,23 +104,23 @@
         <!-- Navigation -->
         <ul class="navbar-nav ml-auto" id="navigation">
           <li class="nav-item" data-menuanchor="home">
-            <a class="nav-link" href="#home">الصفحة الرئيسية</a>
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item" data-menuanchor="our-mission">
-            <a class="nav-link" href="#our-mission">مهمتنا</a>
+            <a class="nav-link" href="#our-mission">Our mission</a>
           </li>
           <li class="nav-item" data-menuanchor="what-we-do">
-            <a class="nav-link" href="#what-we-do">ما نقوم به</a>
+            <a class="nav-link" href="#what-we-do">What we do</a>
           </li>
 
           <li class="nav-item" data-menuanchor="our-work">
-            <a class="nav-link" href="#our-services">خدماتنا</a>
+            <a class="nav-link" href="#our-services">Our services</a>
           </li>
           <li class="nav-item" data-menuanchor="contact">
-            <a class="nav-link" href="#contact">اتصل بنا</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
-          <li class="nav-item" data-menuanchor="English">
-            <a class="nav-link" href="/en-index.html">EN</a>
+          <li class="nav-item" data-menuanchor="Arabic">
+            <a class="nav-link" href="/index.html">AR</a>
           </li>
         </ul>
 
@@ -169,29 +168,26 @@
           </div>
           <div class="overlay-inner bg-dark opacity-70"></div>
         </div>
-        <div class="container align-self-center text-white width-100">
+        <div class="container align-self-center text-white">
           <div class="row">
-            <div class="width-100">
-              <h1
-                lang="ar"
-                class="mb-4 animated align-right-text"
-                data-animation="fadeInUp"
-              >
-                خدمتكم على أعلى مستوى
+            <div class="col-12 col-lg-9 col-xl-6">
+              <h1 lang="ar" class="mb-4 animated" data-animation="fadeInUp">
+                Serving you at the highest level
               </h1>
               <p
-                class="mb-7 animated align-right-text"
+                class="mb-7 animated"
                 data-animation="fadeInUp"
                 data-animation-delay="200"
               >
-                أن نكون الأفضل في صناعة الإحداث وخلق تجربة فريدة
+                To be the best in the events industry and create a unique
+                experience.
               </p>
               <a
                 href="#our-mission"
-                class="btn btn-white mr-3 scrollto animated buttonhover align-right"
+                class="btn btn-white mr-3 scrollto animated buttonhover"
                 data-animation="fadeInUp"
                 data-animation-delay="400"
-                >تعرف أكثر</a
+                >Learn more</a
               >
             </div>
           </div>
@@ -207,22 +203,23 @@
         data-navbar="navbar-light"
       >
         <div class="container align-self-xl-center">
-          <div class="row align-right">
-            <div class="col-12 col-xl-11">
+          <div class="row">
+            <div class="col-12 col-xl-6">
               <h2
-                class="mb-4 animated font-color align-right-text"
+                class="mb-4 animated font-color"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
-                رؤيتنا
+                Our Mission
               </h2>
               <p
-                class="animated font-color align-right-text"
+                class="animated font-color"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
-                تقديم الخدمة لكم على أعلى مستوى من الجودة، والإبداع، وسرعة
-                التنفيذ. وأن نكون الأفضل في صناعة الفعاليات وخلق تجربة فريدة.
+                Serving you at the highest level of quality, creativity, and
+                speed of accomplishment. And to be the best in the events
+                industry and create a unique experience.
               </p>
             </div>
           </div>
@@ -239,23 +236,23 @@
         <div class="container align-self-xl-center">
           <div class="row">
             <div class="col-12 col-xl-5 mb-8 mb-xl-0">
-              <h2
-                class="animated mb-4 font-color align-right-text"
-                data-animation="fadeInUp"
-              >
-                ما نفعله
+              <h2 class="animated mb-4 font-color" data-animation="fadeInUp">
+                What we Do
               </h2>
+
               <p
-                class="animated font-color align-right-text"
+                lang="en"
+                class="animated font-color"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
                 <span
-                  >اترنج لتنظيم المعارض والمؤتمرات متخصصين في مجال الفعاليات
-                  ومنذ أن انطلقنا قمنا بالعديد من الفعاليات والاحداث واستطعنا في
-                  فترة وجيزة أن نحصل على العديد من شركاء النجاح وتقديم جودة
-                  الخدمة والعمل في إرضاء العميل وبمنح الحضور تجربة فريدة تبقى في
-                  الأذهان.</span
+                  >Atrinj for organizing exhibitions and conferences,
+                  specialists in the field of events. Since we started, we have
+                  organized many events and occasions. In a short period, we
+                  have been able to gain many successful partners and provide
+                  quality service, working to satisfy the customer and giving
+                  attendees a memorable experience.</span
                 >
               </p>
             </div>
@@ -268,7 +265,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-timer theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">سرعة الإنجاز</h3>
+                  <h3 class="h4 mb-0">Speed of accomplishment</h3>
                 </div>
 
                 <div
@@ -279,7 +276,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-brush-alt theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">إبداع</h3>
+                  <h3 class="h4 mb-0">Creativity</h3>
                 </div>
 
                 <div
@@ -290,7 +287,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-book theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">موثق جيدًا</h3>
+                  <h3 class="h4 mb-0">Well Documented</h3>
                 </div>
 
                 <div
@@ -301,7 +298,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-layers theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">أنماط متعددة</h3>
+                  <h3 class="h4 mb-0">Multiple Styles</h3>
                 </div>
 
                 <div
@@ -312,7 +309,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-settings theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">مخصص بالكامل</h3>
+                  <h3 class="h4 mb-0">Fully Customizable</h3>
                 </div>
 
                 <div
@@ -323,7 +320,7 @@
                   <div class="icon-7x text-primary mb-4">
                     <i class="ti-headphone-alt theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">دعم ودي</h3>
+                  <h3 class="h4 mb-0">Friendly Support</h3>
                 </div>
               </div>
             </div>
@@ -354,8 +351,9 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                *تنظيم المعارض والمؤتمرات والفعاليات الترفيهية والمناسبات الخاصة
+              <p class="custom-text">
+                Organizing exhibitions, conferences, entertainment events, and
+                special occasions.
               </p>
             </div>
             <div
@@ -369,9 +367,9 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                تنظيم وتشغيل المراكز والمرافق وانشطة التفتيش بكل مايخص الفعالية
-                و المناسبة والافراح
+              <p class="custom-text">
+                Organizing and operating centers, facilities, and inspection
+                activities related to events, occasions, and celebrations.
               </p>
             </div>
             <div
@@ -385,9 +383,10 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                تصميم وتنفيذ أجنحة المعارض ومنصات العرض والمسارح وفق المساحات
-                المطلوبة
+              <p class="custom-text">
+                Designing, building, and executing theaters: Designing and
+                executing exhibition booths, display platforms, and theaters
+                according to required spaces.
               </p>
             </div>
 
@@ -402,8 +401,9 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                كل مايتعلق بالمطبوعات من الاستكرات الدعاية و الهدايا التذكارية
+              <p class="custom-text">
+                Advertising and gifts services: Everything related to printed
+                materials, promotional stickers, and souvenir gifts.
               </p>
             </div>
 
@@ -418,9 +418,10 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                إدارة العلاقات العامة بالتنظيم والتخطيط وإدارة المعارض
-                والمؤتمرات وإرسال الدعوات والاستقبال وحجز التذاكر وخدمات الضيافة
+              <p class="custom-text">
+                Public Relations Management: Organizing, planning, managing
+                exhibitions and conferences, sending invitations, reception,
+                ticket booking, and hospitality services.
               </p>
             </div>
             <div
@@ -434,9 +435,10 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                نقوم بخدمة التسجيل وبرامج التسجيل الالكترونية و إدارة الحشود
-                ورسم خطة التشغيلية للفعالية
+              <p class="custom-text">
+                Registration and crowd management services: Providing
+                registration services, electronic registration programs, crowd
+                management, and operational planning for events.
               </p>
             </div>
             <div
@@ -450,8 +452,9 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                نقدم تصميم وابتكار الهوية البصرية بطريقة مبدعة
+              <p class="custom-text">
+                Design and visual identity services: Creative design and
+                innovation of visual identities.
               </p>
             </div>
             <div
@@ -465,9 +468,9 @@
                 alt=""
               />
               <div class="bg-color1"></div>
-              <p class="custom-text align-right-text">
-                نقدم جميع أنواع الصوتيات و أنواع الاضاءات المتنوعة للفعاليات
-                الداخلية والخارجية
+              <p class="custom-text">
+                Sound and lighting systems: Providing various types of audio and
+                lighting equipment for indoor and outdoor events."
               </p>
             </div>
           </div>
