--- a/en-index.html
+++ b/en-index.html
@@ -120,7 +120,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item" data-menuanchor="Arabic">
-            <a class="nav-link" href="/index.html">AR</a>
+            <a class="nav-link" href="/">AR</a>
           </li>
         </ul>
 
