--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" class="no-js">
   <head>
     <!-- Title -->
-    <title>Atrnj</title>
+    <title>Atrnj-EN</title>
 
     <!-- Required Meta Tags -->
     <meta charset="utf-8" />
@@ -121,7 +121,7 @@
             <a class="nav-link" href="#contact">اتصل بنا</a>
           </li>
           <li class="nav-item" data-menuanchor="English">
-            <a class="nav-link" href="/en-index.html">EN</a>
+            <a class="nav-link" href="../en-index.html">EN</a>
           </li>
         </ul>
 
