--- a/en-index.html
+++ b/en-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" class="no-js">
+<html lang="en" class="no-js">
   <head>
     <!-- Title -->
     <title>Atrnj</title>
@@ -594,7 +594,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="http://127.0.0.1:5500/thanks.html"
+                  value="http://ismailmahmood11.github.io/atrnj/thanks.html"
                 />
                 <input type="hidden" name="_captcha" value="false" />
               </form>
