--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" class="no-js">
   <head>
     <!-- Title -->
-    <title>Atrnj-EN</title>
+    <title>Atrnj</title>
 
     <!-- Required Meta Tags -->
     <meta charset="utf-8" />
@@ -121,7 +121,7 @@
             <a class="nav-link" href="#contact">اتصل بنا</a>
           </li>
           <li class="nav-item" data-menuanchor="English">
-            <a class="nav-link" href="../en-index.html">EN</a>
+            <a class="nav-link" href="atrnj/en-index.html">EN</a>
           </li>
         </ul>
 
@@ -591,7 +591,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="http://127.0.0.1:5500/thanks.html"
+                  value="http://ismailmahmood11.github.io/atrnj/thanks.html"
                 />
                 <input type="hidden" name="_captcha" value="false" />
               </form>
