--- a/index.html
+++ b/index.html
@@ -14,28 +14,19 @@
       name="description"
       content="Bootstrap HTML template and UI kit by Erilisdesign"
     />
-    <script src="assets/javascript/index.js"></script>
     <!-- Libs CSS -->
     <link
       rel="stylesheet"
       href="assets/vendor/fullPage.js/dist/jquery.fullpage.min.css"
       type="text/css"
     />
-    <link
-      rel="stylesheet"
-      href="assets/vendor/slick/slick.min.css"
-      type="text/css"
-    />
+ 
     <link
       rel="stylesheet"
       href="assets/vendor/vegas/vegas.min.css"
       type="text/css"
     />
-    <link
-      rel="stylesheet"
-      href="assets/vendor/magnific-popup/dist/magnific-popup.min.css"
-      type="text/css"
-    />
+   
     <link
       rel="stylesheet"
       href="assets/vendor/animate.css/animate.min.css"
@@ -265,10 +256,18 @@
                   class="col-md-6 col-sm-6 mb-8 animated"
                   data-animation="fadeInUp"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    class="icon-7x text-primary mb-4 icons-phone"
+                    style="display: flex; justify-content: space-around"
+                  >
                     <i class="ti-timer theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">سرعة الإنجاز</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0 t"
+                  >
+                    سرعة الإنجاز
+                  </h3>
                 </div>
 
                 <div
@@ -276,10 +275,18 @@
                   data-animation="fadeInUp"
                   data-animation-delay="150"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    style="display: flex; justify-content: space-around"
+                    class="icon-7x text-primary mb-4 icons-phone"
+                  >
                     <i class="ti-brush-alt theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">إبداع</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0"
+                  >
+                    إبداع
+                  </h3>
                 </div>
 
                 <div
@@ -287,10 +294,18 @@
                   data-animation="fadeInUp"
                   data-animation-delay="300"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    style="display: flex; justify-content: space-around"
+                    class="icon-7x text-primary mb-4"
+                  >
                     <i class="ti-book theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">موثق جيدًا</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0"
+                  >
+                    موثق جيدًا
+                  </h3>
                 </div>
 
                 <div
@@ -298,10 +313,18 @@
                   data-animation="fadeInUp"
                   data-animation-delay="450"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    style="display: flex; justify-content: space-around"
+                    class="icon-7x text-primary mb-4"
+                  >
                     <i class="ti-layers theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">أنماط متعددة</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0"
+                  >
+                    أنماط متعددة
+                  </h3>
                 </div>
 
                 <div
@@ -309,10 +332,18 @@
                   data-animation="fadeInUp"
                   data-animation-delay="600"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    style="display: flex; justify-content: space-around"
+                    class="icon-7x text-primary mb-4"
+                  >
                     <i class="ti-settings theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">مخصص بالكامل</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0"
+                  >
+                    مخصص بالكامل
+                  </h3>
                 </div>
 
                 <div
@@ -320,10 +351,18 @@
                   data-animation="fadeInUp"
                   data-animation-delay="750"
                 >
-                  <div class="icon-7x text-primary mb-4">
+                  <div
+                    style="display: flex; justify-content: space-around"
+                    class="icon-7x text-primary mb-4"
+                  >
                     <i class="ti-headphone-alt theme-color"></i>
                   </div>
-                  <h3 class="h4 mb-0">دعم ودي</h3>
+                  <h3
+                    style="display: flex; justify-content: space-around"
+                    class="h4 mb-0"
+                  >
+                    دعم ودي
+                  </h3>
                 </div>
               </div>
             </div>
@@ -689,19 +728,13 @@
 
     <!-- Libs JS -->
     <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="assets/vendor/popper.js/dist/popper.min.js"></script>
     <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/vendor/fullPage.js/dist/scrolloverflow.min.js"></script>
     <script src="assets/vendor/fullPage.js/dist/jquery.fullpage.min.js"></script>
     <script src="assets/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
     <script src="assets/vendor/jquery-smooth-scroll/jquery.smooth-scroll.min.js"></script>
-    <script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="assets/vendor/jquery-form/dist/jquery.form.min.js"></script>
-    <script src="assets/vendor/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
     <script src="assets/vendor/jQuery.countdown/dist/jquery.countdown.min.js"></script>
-    <script src="assets/vendor/granim.js/dist/granim.min.js"></script>
-    <script src="assets/vendor/slick/slick.min.js"></script>
-    <script src="assets/vendor/vegas/vegas.min.js"></script>
 
     <!-- Theme JS -->
     <script src="assets/js/main.js"></script>
