--- a/en.html
+++ b/en.html
@@ -87,9 +87,9 @@
       </button>
 
       <!-- Collapse -->
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="collapse navbar-collapse " id="navbarCollapse ">
         <!-- Navigation -->
-        <ul class="navbar-nav ml-auto" id="navigation">
+        <ul class="navbar-nav ml-auto " id="navigation">
           <li class="nav-item" data-menuanchor="home">
             <a class="nav-link" href="#home">Home</a>
           </li>
@@ -106,8 +106,8 @@
           <li class="nav-item" data-menuanchor="contact">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
-          <li class="nav-item" data-menuanchor="Arabic">
-            <a class="nav-link" href="index.html">AR</a>
+          <li class="nav-item " data-menuanchor="Arabic">
+            <a class="nav-link " href="index.html">AR</a>
           </li>
         </ul>
 
@@ -490,8 +490,7 @@
                     <i class="ti-mobile theme-color" theme-color></i>
                   </div>
                   <p class="mb-0">
-                    (0091) 1111 1234567<br />
-                    (084) 2222 1234567
+                    +966 54 116 6982
                   </p>
                 </div>
 
@@ -500,8 +499,8 @@
                     <i class="ti-location-pin theme-color"></i>
                   </div>
                   <p class="mb-0">
-                    69 Halsey St, New York, Ny 10002,<br />
-                    United States
+                    Riyadh,<br />
+                    Saudi Arabia
                   </p>
                 </div>
 
@@ -673,6 +672,27 @@
               </div>
             </div> -->
           </div>
+          <nav class="ln-social-icons">
+            <ul class="mx-auto">
+              <li>
+                <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
+                  ><i class="fab tiktok-icon"
+                    ><img
+                      class="tiktok-icon"
+                      src="/assets/images/icon/tiktok.svg"
+                      alt="" /></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.instagram.com/atrnj_co/"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"><i class="fab fa-snapchat"></i></a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </section>
     </div>
