--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
       href="assets/vendor/fullPage.js/dist/jquery.fullpage.min.css"
       type="text/css"
     />
- 
+
     <link
       rel="stylesheet"
       href="assets/vendor/vegas/vegas.min.css"
       type="text/css"
     />
-   
+    <link
+      rel="stylesheet"
+      href="assets/plugins/_fullpage.scss"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="assets/vendor/animate.css/animate.min.css"
@@ -92,7 +96,7 @@
       </button>
 
       <!-- Collapse -->
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="collapse navbar-collapse font-almarai" id="navbarCollapse">
         <!-- Navigation -->
         <ul class="navbar-nav ml-auto" id="navigation">
           <li class="nav-item" data-menuanchor="home">
@@ -165,13 +169,13 @@
             <div class="width-100">
               <h1
                 lang="ar"
-                class="mb-4 animated align-right-text"
+                class="mb-4 animated align-right-text font-almarai"
                 data-animation="fadeInUp"
               >
                 خدمتكم على أعلى مستوى
               </h1>
               <p
-                class="mb-7 animated align-right-text"
+                class="mb-7 animated align-right-text font-almarai"
                 data-animation="fadeInUp"
                 data-animation-delay="200"
               >
@@ -179,7 +183,7 @@
               </p>
               <a
                 href="#our-mission"
-                class="btn btn-white mr-3 scrollto animated buttonhover align-right"
+                class="btn btn-white mr-3 scrollto animated buttonhover align-right font-almarai"
                 data-animation="fadeInUp"
                 data-animation-delay="400"
                 >تعرف أكثر</a
@@ -198,17 +202,17 @@
         data-navbar="navbar-light"
       >
         <div class="container align-self-xl-center">
-          <div class="row align-right">
+          <div class="row">
             <div class="col-12 col-xl-11">
               <h2
-                class="mb-4 animated font-color align-right-text"
+                class="mb-4 animated font-color align-right-text font-almarai"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
                 رؤيتنا
               </h2>
               <p
-                class="animated font-color align-right-text"
+                class="animated phone-container-overflow font-color align-right-text font-almarai"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
@@ -231,13 +235,13 @@
           <div class="row">
             <div class="col-12 col-xl-5 mb-8 mb-xl-0">
               <h2
-                class="animated mb-4 font-color align-right-text"
+                class="animated mb-4 font-color align-right-text font-almarai"
                 data-animation="fadeInUp"
               >
                 ما نفعله
               </h2>
               <p
-                class="animated font-color align-right-text"
+                class="animated font-color align-right-text font-almarai"
                 data-animation="fadeInUp"
                 data-animation-delay="150"
               >
@@ -264,7 +268,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0 t"
+                    class="font-almarai mb-0"
                   >
                     سرعة الإنجاز
                   </h3>
@@ -283,7 +287,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0"
+                    class="mb-0 font-almarai"
                   >
                     إبداع
                   </h3>
@@ -302,7 +306,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0"
+                    class="font-almarai mb-0"
                   >
                     موثق جيدًا
                   </h3>
@@ -321,7 +325,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0"
+                    class="font-almarai mb-0"
                   >
                     أنماط متعددة
                   </h3>
@@ -340,7 +344,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0"
+                    class="font-almarai mb-0"
                   >
                     مخصص بالكامل
                   </h3>
@@ -359,7 +363,7 @@
                   </div>
                   <h3
                     style="display: flex; justify-content: space-around"
-                    class="h4 mb-0"
+                    class="font-almarai mb-0"
                   >
                     دعم ودي
                   </h3>
@@ -378,10 +382,13 @@
         data-navbar="navbar-light"
       >
         <div class="margin20">
-          <h2 class="mb-4 animated title" data-animation="fadeInUp">
-            Our services:
+          <h2
+            class="mb-4 animated title align-right-text margin-3"
+            data-animation="fadeInUp"
+          >
+            :خدماتنا
           </h2>
-          <div class="grid-container">
+          <div class="grid-container font-almarai">
             <div
               class="custom-container animated"
               data-animation="fadeInUp"
@@ -521,27 +528,28 @@
         data-ui="dark"
         data-navbar="navbar-light"
       >
-        <div class="container align-self-center theme-color-2">
+        <div
+          class="container align-self-center theme-color-2 align-right-text font-almarai"
+        >
           <div class="row mb-7">
             <div class="col-12 col-xl-6">
-              <h2 class="mb-4">Contact Us</h2>
-              <p data-animation-delay="150">
-                Want to say hello? Want to know more about us? Give us a call or
-                drop us an email and we will get back to you as soon as we can.
+              <h2 class="font-almarai">اتصل بنا</h2>
+              <p data-animation-delay="150 ">
+                تريد أن تقول مرحبا؟ تريد ان تعرف المزيد عنا؟ اتصل بنا أو أرسل
+                لنا بريدًا إلكترونيًا وسنقوم بالرد عليك في أقرب وقت ممكن.
               </p>
             </div>
           </div>
           <div class="row">
             <div class="col-12 col-lg-5 mb-8 mb-lg-0">
               <div class="row">
-                <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5">
+                <div
+                  class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 align-left-text"
+                >
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile theme-color" theme-color></i>
                   </div>
-                  <p class="mb-0">
-                    (0091) 1111 1234567<br />
-                    (084) 2222 1234567
-                  </p>
+                  <p class="mb-0">+966 54 116 6982</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5">
@@ -549,12 +557,12 @@
                     <i class="ti-location-pin theme-color"></i>
                   </div>
                   <p class="mb-0">
-                    69 Halsey St, New York, Ny 10002,<br />
-                    United States
+                    الرياض<br />
+                    المملكة العربية السعودية
                   </p>
                 </div>
 
-                <div class="col-12 col-md-4 col-lg-6">
+                <div class="col-12 col-md-4 col-lg-6 align-left-text">
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-email theme-color"></i>
                   </div>
@@ -722,6 +730,27 @@
               </div>
             </div> -->
           </div>
+          <nav class="ln-social-icons">
+            <ul class="mx-auto">
+              <li>
+                <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
+                  ><i class="fab tiktok-icon"
+                    ><img
+                      class="tiktok-icon"
+                      src="/assets/images/icon/tiktok.svg"
+                      alt="" /></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.instagram.com/atrnj_co/"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"><i class="fab fa-snapchat"></i></a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </section>
     </div>
