--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ar" class="no-js">
   <head>
     <!-- Title -->
@@ -733,7 +733,7 @@
                   ><i class="fab tiktok-icon"
                     ><img
                       class="tiktok-icon"
-                      src="/assets/images/icon/tiktok.svg"
+                      src="assets/images/icon/tiktok.svg"
                       alt="" /></i
                 ></a>
               </li>
