--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       type="text/css"
     />
 
-
     <link
       rel="stylesheet"
       href="assets/plugins/_fullpage.scss"
@@ -743,7 +742,11 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"><i class="fab fa-snapchat"></i></a>
+                <a
+                  target="_blank"
+                  href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"
+                  ><i class="fab fa-snapchat"></i
+                ></a>
               </li>
             </ul>
           </nav>
