--- a/en.html
+++ b/en.html
@@ -510,11 +510,11 @@
                     <i class="ti-email theme-color"></i>
                   </div>
                   <p class="mb-0">
-                    <a href="mailto:support@example.com" class="theme-color-2"
-                      >support@example.com</a
+                    <a href="mailto:support@atrnj.co" class="theme-color-2"
+                      >support@atrnj.co</a
                     ><br />
-                    <a href="mailto:hello@example.com" class="theme-color-2"
-                      >hello@example.com</a
+                    <a href="mailto:hello@atrnj.co" class="theme-color-2"
+                      >hello@atrnj.co</a
                     >
                   </p>
                 </div>
