--- a/index.html
+++ b/index.html
@@ -561,12 +561,12 @@
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-email theme-color"></i>
                   </div>
-                  <p class="mb-0">
-                    <a href="mailto:support@example.com" class="theme-color-2"
-                      >support@example.com</a
+                  <p class="mb-0 align-left-text">
+                    <a href="mailto:support@atrnj.co" class="theme-color-2"
+                      >support@atrnj.co</a
                     ><br />
-                    <a href="mailto:hello@example.com" class="theme-color-2"
-                      >hello@example.com</a
+                    <a href="mailto:hello@atrjn.com" class="theme-color-2 "
+                      >hello@atrjn.com</a
                     >
                   </p>
                 </div>
@@ -582,8 +582,8 @@
                   <div class="col-12 col-md-6">
                     <div class="form-group">
                       <input
-                        class="form-control required"
-                        placeholder="Enter your name"
+                        class="form-control required align-right-text"
+                        placeholder="أدخل أسمك"
                         type="text"
                         name="name"
                         required
@@ -594,8 +594,8 @@
                   <div class="col-12 col-md-6">
                     <div class="form-group">
                       <input
-                        class="form-control required"
-                        placeholder="Enter your email"
+                        class="form-control required align-right-text"
+                        placeholder="أدخل بريدك الإلكتروني"
                         type="email"
                         name="email"
                         required
@@ -607,9 +607,9 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control align-right-text"
                         name="_subject"
-                        placeholder="Subject (Optional)"
+                        placeholder="الموضوع (اختياري)"
                       />
                     </div>
                   </div>
@@ -618,15 +618,15 @@
                     <div class="form-group">
                       <textarea
                         name="message"
-                        placeholder="Here goes your message "
-                        class="form-control required"
+                        placeholder="هنا تذهب رسالتك"
+                        class="form-control required align-right-text"
                         rows="7"
                       ></textarea>
                     </div>
                   </div>
                   <div class="col-12">
                     <button class="btn btn-primary send-button" type="submit">
-                      Send Message
+                      أرسل رسالة
                     </button>
                   </div>
                 </div>
