--- a/en.html
+++ b/en.html
@@ -137,7 +137,7 @@
     </div>
 
     <!-- Fullpage content -->
-    <div class="ln-fullpage" data-navigation="true">
+    <div class="" data-navigation="true">
       <!-- Section - Home -->
       <section
         class="ln-section d-flex min-vh-100"
