--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           class="container align-self-center theme-color-2 align-right-text font-almarai"
         >
           <div class="row mb-7">
-            <div class="col-12vi">
+            <div class="col-12">
               <h2 class="font-almarai">اتصل بنا</h2>
               <p data-animation-delay="150 ">
                 تريد أن تقول مرحبا؟ تريد ان تعرف المزيد عنا؟ اتصل بنا أو أرسل
