--- a/en.html
+++ b/en.html
@@ -69,7 +69,7 @@
       data-navbar-scrolled="navbar-light"
     >
       <!-- Brand -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#home">
         <img src="assets/images/logo.svg" class="navbar-brand-img" alt="logo" />
       </a>
 
