--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       data-navbar-scrolled="navbar-light"
     >
       <!-- Brand -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#home">
         <img src="assets/images/logo.svg" class="navbar-brand-img" alt="logo" />
       </a>
 
