--- a/en.html
+++ b/en.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Bootstrap HTML template and UI kit by Erilisdesign"
+      content="atrnj website"
     />
     <!-- Libs CSS -->
     <link
