--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="description"
-      content="Bootstrap HTML template and UI kit by Erilisdesign"
+      content="atrnj website"
     />
     <!-- Libs CSS -->
     <link
